After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 681564 - Issue setting "video-source-filter" property on wrappercamerabinsrc
Issue setting "video-source-filter" property on wrappercamerabinsrc
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other All
: Normal normal
: 1.0.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks: 685057
 
 
Reported: 2012-08-09 22:34 UTC by Andre Moreira Magalhaes
Modified: 2012-09-28 15:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
camerabin: use correct element name when replacing the video filter (1.24 KB, patch)
2012-09-27 22:42 UTC, Thiago Sousa Santos
committed Details | Review

Description Andre Moreira Magalhaes 2012-08-09 22:34:00 UTC
While setting the property "video-source-filter" wrappercamerabinsrc only unrefs the current filter, but does not remove it from the pipeline.
Comment 1 Tim-Philipp Müller 2012-08-14 09:17:48 UTC
Could you make a patch ?
Comment 2 Thiago Sousa Santos 2012-09-27 22:42:06 UTC
Created attachment 225298 [details] [review]
camerabin: use correct element name when replacing the video filter

The name was updated on the 0.10 -> 1.0 transition, but the
gst_bin_remove was still using the old name, causing an assertion
when replacing video-source-filter
Comment 3 Thiago Sousa Santos 2012-09-27 22:43:59 UTC
commit efd14946fd8bb4765c61b6ca02029241a7decee2
Author: Thiago Santos <thiago.sousa.santos@collabora.com>
Date:   Thu Sep 27 19:40:36 2012 -0300

    camerabin: use correct element name when replacing the video filter
    
    The name was updated on the 0.10 -> 1.0 transition, but the
    gst_bin_remove was still using the old name, causing an assertion
    when replacing video-source-filter
    
    https://bugzilla.gnome.org/show_bug.cgi?id=681564

Just pushed it. I guess this was the issue you had. If not, please reopen.